chore: use java 21